--- a/Frutiapp/app/src/main/AndroidManifest.xml
+++ b/Frutiapp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Nivel1"></activity>
+        <activity android:name=".Nivel2"></activity>
+        <activity android:name=".Nivel1" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait">
